# backend/internal/adapters/primary/auth/dto/request_activation.go
@@ -1,0 +1,9 @@
+package dto
+
+type RequestActivationRequest struct {
+	Email string `json:"email"`
+}
+
+type RequestActivationResponse struct {
+	Message string `json:"message"`
+}
