# backend/internal/adapters/primary/auth/dto/resend_activation.go
@@ -1,0 +1,8 @@
+package dto
+
+type ResendActivationRequest struct {
+	Email string `json:"email"`
+}
+type ResendActivationResponse struct {
+	Message string `json:"message"`
+}
